--- a/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
+++ b/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/phoneVerifyLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="@dimen/_16sdp"
     tools:context=".ui.Order.OrderPhoneVerify">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/_8sdp"
         android:text="@string/order_phone_header"
-        android:textColor="@color/colorBlack"
-        android:textSize="18sp"
+        android:textColor="@color/colorBlackText"
+        android:textSize="@dimen/_14sdp"
         android:textStyle="bold" />
 
     <TextView
@@ -26,14 +26,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/phone_number_unknown"
-        android:textColor="@color/colorBlack"
-        android:textSize="16sp" />
+        android:textColor="@color/colorBlackText"
+        android:textSize="@dimen/_14sdp"
+        android:textStyle="italic" />
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/_80sdp"
+        android:layout_height="@dimen/_80sdp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_12sdp"
         android:background="@drawable/icon_sms_medium"
         android:contentDescription="@string/image" />
 
@@ -41,62 +42,75 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_12sdp"
         android:fontFamily="sans-serif-light"
         android:text="@string/order_phone_subheading"
         android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textSize="@dimen/_14sdp" />
 
     <TextView
         android:id="@+id/mobileCodeMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:fontFamily="sans-serif-light"
         android:textAlignment="textStart"
         android:textColor="@color/colorError"
-        android:textSize="16sp"
+        android:textSize="@dimen/_14sdp"
         android:visibility="gone" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/orderCodeVerify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:importantForAutofill="no"
-        android:inputType="number" />
+        android:layout_marginTop="@dimen/_16sdp"
+        app:counterEnabled="true"
+        app:counterMaxLength="6"
+        app:errorEnabled="true"
+        app:hintTextColor="@color/mainUiColour">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/verification_code"
+            android:inputType="number"
+            android:textCursorDrawable="@drawable/cursor_main_ui"
+            android:theme="@style/EditTextMainUiTheme" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:id="@+id/phoneVerifyBtn"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_16sdp"
         android:background="@color/mainUiColour"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:padding="8dp"
-        android:layout_height="wrap_content">
+        android:padding="@dimen/_6sdp">
 
         <ProgressBar
             android:id="@+id/progressBarCodeVerify"
             android:layout_width="match_parent"
+            android:layout_height="@dimen/_24sdp"
             android:layout_gravity="center"
-            android:visibility="gone"
             android:indeterminate="true"
-            android:indeterminateTintMode="src_atop"
             android:indeterminateTint="@color/colorWhite"
-            android:layout_height="24dp" />
+            android:indeterminateTintMode="src_atop"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/PhoneVerifyTextView"
-            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="@dimen/_24sdp"
             android:clickable="true"
-            android:textAllCaps="true"
-            android:textStyle="bold"
+            android:focusable="true"
+            android:gravity="center"
             android:text="@string/order_phone_btn_verify"
+            android:textAllCaps="true"
             android:textColor="@color/colorWhite"
-            android:textSize="20sp" />
+            android:textSize="@dimen/_16sdp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
     </LinearLayout>
 
@@ -104,23 +118,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="@dimen/_24sdp"
         android:fontFamily="sans-serif-light"
         android:text="@string/order_phone_didnt_recieve"
         android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textSize="@dimen/_12sdp" />
 
     <TextView
         android:id="@+id/resendPinCodeOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:fontFamily="sans-serif-light"
         android:text="@string/order_phone_new_pin"
         android:textAlignment="center"
         android:textColor="@color/colorGreen"
-        android:textSize="16sp" />
+        android:textSize="@dimen/_12sdp" />
 
 
 </LinearLayout>
