--- a/app/src/main/res/layout/manuka_fragment_step1.xml
+++ b/app/src/main/res/layout/manuka_fragment_step1.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="@dimen/_10sdp"
     tools:context=".ui.Order.Step1"
     tools:ignore="LabelFor">
 
@@ -14,70 +15,80 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:text="@string/orderDeliveryHeader"
         android:textColor="@color/colorBlack"
-        android:textSize="18sp"
-        android:textStyle="bold"></TextView>
+        android:textSize="@dimen/_12sdp"
+        android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/orderName"
-        android:textSize="14sp"></TextView>
-
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/orderName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textSize="20sp" />
+        app:errorEnabled="true"
+        app:hintTextColor="@color/mainUiColour">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/orderPhone"
-        android:textSize="14sp"></TextView>
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/orderName"
+            android:inputType="textPersonName"
+            android:textCursorDrawable="@drawable/cursor_main_ui"
+            android:theme="@style/EditTextMainUiTheme" />
 
-    <EditText
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/orderPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:importantForAutofill="no"
-        android:inputType="phone"
-        android:textSize="18sp" />
+        app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="9"
+        app:hintTextColor="@color/mainUiColour">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/orderEmail"
-        android:textSize="14sp"></TextView>
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/orderPhone"
+            android:inputType="phone"
+            android:textCursorDrawable="@drawable/cursor_main_ui"
+            android:theme="@style/EditTextMainUiTheme" />
 
-    <EditText
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/orderEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
-        android:textSize="20sp" />
+        app:errorEnabled="true"
+        app:hintTextColor="@color/mainUiColour">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/orderAddress"
-        android:textSize="14sp"></TextView>
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/orderEmail"
+            android:inputType="textEmailAddress"
+            android:textCursorDrawable="@drawable/cursor_main_ui"
+            android:theme="@style/EditTextMainUiTheme" />
 
-    <EditText
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/orderAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:textSize="20sp" />
+        app:errorEnabled="true"
+        app:hintTextColor="@color/mainUiColour">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/orderAddress"
+            android:inputType="textPostalAddress"
+            android:textCursorDrawable="@drawable/cursor_main_ui"
+            android:theme="@style/EditTextMainUiTheme" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
