--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,5 @@
     <color name="custom_background_color2"> #22d1ee</color>
     <color name="custom_background_color">#e2f3f5</color>
     <color name="btnColor2">#2f89fc</color>
+    <color name="whiteLogin">#CCFFFFFF</color>
 </resources>
