--- a/app/src/main/res/layout/manuka_fragment_category_selected.xml
+++ b/app/src/main/res/layout/manuka_fragment_category_selected.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e6ecff"
+    android:background="@color/colorHome"
     android:orientation="vertical"
     tools:context=".ui.newPost.CategorySelected">
 
@@ -19,51 +19,55 @@
         <TextView
             android:id="@+id/allCatSeleted"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="14dp"
-            android:background="#ffffff"
+            android:layout_height="@dimen/_60sdp"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:background="@color/colorWhite"
             android:gravity="center_vertical"
-            android:paddingStart="18dp"
+            android:paddingStart="@dimen/_14sdp"
+            android:paddingEnd="@dimen/_14sdp"
             android:text="@string/all_categories"
             android:textColor="#b3b3b3"
-            android:textSize="16sp"></TextView>
+            android:textSize="@dimen/_14sdp" />
 
         <TextView
             android:id="@+id/allServiceSeleted"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/_60sdp"
             android:background="@color/colorWhite"
             android:gravity="center_vertical"
-            android:paddingStart="18dp"
+            android:paddingStart="@dimen/_14sdp"
+            android:paddingEnd="@dimen/_14sdp"
             android:text="@string/sell_an_item"
             android:textColor="#b3b3b3"
-            android:textSize="16sp"></TextView>
+            android:textSize="@dimen/_14sdp" />
 
         <LinearLayout
             android:id="@+id/locationSelectedLayout"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/_60sdp"
             android:background="#0066ff">
-
-            <!-- Manuka -->
 
             <ImageView
                 android:id="@+id/selectedCategoryImage"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/image"
-                android:padding="8dp"/>
+                android:padding="@dimen/_8sdp"
+                android:src="@drawable/spinner_48_inner_holo" />
 
             <TextView
                 android:id="@+id/selectedCategoryTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:paddingStart="4dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingStart="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_4sdp"
                 android:text="@string/loading"
                 android:textColor="@color/colorWhite"
-                android:textSize="16sp"></TextView>
+                android:textSize="@dimen/_14sdp" />
 
         </LinearLayout>
 
