--- a/app/src/main/res/layout/catergory_row.xml
+++ b/app/src/main/res/layout/catergory_row.xml
@@ -2,26 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="@dimen/_60sdp">
 
     <!-- Manuka -->
 
     <ImageView
         android:id="@+id/categoryImagePost"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_gravity="center_vertical"
-        android:padding="8dp"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:padding="@dimen/_8sdp"
+        app:srcCompat="@drawable/spinner_48_inner_holo" />
 
-        <TextView
-            android:id="@+id/categoryTitlePost"
-            android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:layout_height="match_parent"
-            android:paddingStart="4dp"
-            android:text="@string/loading"
-            android:textSize="16dp"
-            android:textColor="#000000"></TextView>
+    <TextView
+        android:id="@+id/categoryTitlePost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:ellipsize="end"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:paddingStart="@dimen/_4sdp"
+        android:paddingEnd="@dimen/_4sdp"
+        android:text="@string/loading"
+        android:textColor="@color/colorBlackText"
+        android:textSize="@dimen/_14sdp" />
 
 </LinearLayout>
