--- a/app/src/main/res/layout/manuka_fragment_categories_new_post.xml
+++ b/app/src/main/res/layout/manuka_fragment_categories_new_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e6ecff"
+    android:background="@color/colorHome"
     android:orientation="vertical"
     tools:context=".ui.newPost.AllCategoriesNewPost">
 
@@ -18,37 +18,35 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:layout_weight="2"
-            android:background="#ffffff"
+            android:background="@color/colorWhite"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="@dimen/_56sdp"
                 android:gravity="center_vertical"
-                android:paddingStart="18dp"
+                android:paddingStart="@dimen/_14sdp"
                 android:text="@string/all_categories"
                 android:textColor="#b3b3b3"
-                android:textSize="16dp"></TextView>
+                android:textSize="@dimen/_14sdp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:background="#0066ff"
+                android:background="@color/com_facebook_button_background_color"
                 android:gravity="center_vertical"
-                android:paddingStart="18dp"
+                android:paddingStart="@dimen/_14sdp"
                 android:text="@string/sell_an_item"
-                android:textColor="#ffffff"
-                android:textSize="16dp"></TextView>
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_14sdp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/CategoryListPost"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent" />
 
-
-            </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
 
     </LinearLayout>
