--- a/app/src/main/res/layout/manuka_fragment_location_selector.xml
+++ b/app/src/main/res/layout/manuka_fragment_location_selector.xml
@@ -1,86 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="46dp"
-    android:orientation="vertical"
+    android:layout_marginBottom="@dimen/_20sdp"
     android:background="@color/colorHome"
+    android:orientation="vertical"
     tools:context=".ui.newPost.LocationSelector">
 
     <TextView
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#CC000000"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:gravity="center"
         android:text="@string/selectLocation"
-        android:gravity="center"/>
+        android:textColor="@color/colorBlackText"
+        android:textSize="@dimen/_16sdp" />
 
     <LinearLayout
         android:id="@+id/layoutTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="14sp"
         android:background="@color/colorWhite"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/_12sdp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="@string/locationSelectorLocation"
-            android:labelFor="@+id/locationSelectNewPost"/>
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/locationSelectNewPost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:textSize="20sp"
-            android:importantForAutofill="no" />
+            android:clickable="true"
+            app:errorEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:text="@string/colombo"
+                android:focusableInTouchMode="false"
+                android:hint="@string/adLocation"
+                android:inputType="text"
+                android:longClickable="false"
+                android:textColorHint="@color/mainUiColour"
+                android:textCursorDrawable="@drawable/cursor_main_ui"
+                android:textSize="@dimen/_16sdp"
+                android:theme="@style/EditTextMainUiTheme" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:id="@+id/locationExtraLayout"
-            android:visibility="visible"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
-        <TextView
-            android:layout_marginTop="40dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="@string/locationAuto"
-            android:gravity="center"/>
+            android:visibility="visible">
 
-        <Button
-            android:id="@+id/setLocationNewAd"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:textAllCaps="false"
-            android:background="@color/mainUiColour"
-            android:textSize="16sp"
-            android:text="@string/useLocationBtn"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:gravity="center"
+                android:text="@string/locationAuto"
+                android:textSize="@dimen/_12sdp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/changeLocation"
-            android:gravity="center"
-            android:textSize="14sp"/>
+            <Button
+                android:id="@+id/setLocationNewAd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_14sdp"
+                android:background="@color/mainUiColour"
+                android:text="@string/useLocationBtn"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_14sdp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/changeLocation"
+                android:textSize="@dimen/_12sdp" />
+
         </LinearLayout>
 
     </LinearLayout>
 
     <ProgressBar
         android:id="@+id/locationSelectorProgress"
-        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"/>
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/mainUiColour"
+        android:indeterminateTintMode="src_atop" />
 
 </LinearLayout>
