--- a/app/src/main/res/layout/manuka_activity_select_category_and_filter.xml
+++ b/app/src/main/res/layout/manuka_activity_select_category_and_filter.xml
@@ -30,7 +30,7 @@
                 android:layout_marginTop="@dimen/_14sdp"
                 android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                 android:drawablePadding="@dimen/_4sdp"
-                android:text="Go to all ads"
+                android:text="@string/go_to_all_ads"
                 android:textColor="@color/colorBlackText"
                 android:textSize="@dimen/_14sdp" />
 
