--- a/app/src/main/res/layout/manuka_phone_numbers.xml
+++ b/app/src/main/res/layout/manuka_phone_numbers.xml
@@ -3,48 +3,53 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="@dimen/_4sdp"
     android:id="@+id/layoytHold">
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:padding="@dimen/_2sdp"
+        android:layout_height="@dimen/_28sdp"
         android:id="@+id/subLayout">
 
     <TextView
         android:gravity="start"
         android:id="@+id/phoneNumber"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0775454565"
+        android:layout_height="match_parent"
+        android:text="@string/loading"
+        android:layout_centerVertical="true"
         android:textColor="@color/colorBlack"
-        android:textSize="16sp" />
+        android:textSize="@dimen/_14sdp" />
 
     <ImageView
         android:id="@+id/phoneNumberVerified"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_width="46dp"
-        android:layout_height="14dp"
+        android:layout_marginStart="@dimen/_6sdp"
+        android:layout_width="@dimen/_46sdp"
+        android:layout_height="@dimen/_14sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:layout_centerVertical="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/phoneNumber"
-        android:background="@drawable/icon_verified_small" />
+        android:layout_toEndOf="@id/phoneNumber"
+        android:background="@drawable/icon_verified_small"
+        android:contentDescription="@string/image" />
 
     <ImageView
         android:id="@+id/phoneNumberRemove"
-        android:layout_width="32dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="0dp"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/icon_delete" />
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_26sdp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/icon_delete"
+        android:contentDescription="@string/image" />
+
     </RelativeLayout>
 
     <TextView
         android:id="@+id/libne"
-        android:layout_alignBottom="@+id/subLayout"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_alignBottom="@+id/subLayout"
         android:background="#52000000" />
 
 </RelativeLayout>
