manuka - responsive design admin orders

--- a/app/src/main/res/layout/manuka_admin_activity_orders_main.xml
+++ b/app/src/main/res/layout/manuka_admin_activity_orders_main.xml
@@ -15,7 +15,7 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar_admin"></include>
+            layout="@layout/toolbar_admin"/>
 
         <FrameLayout
             android:id="@+id/frameLayout"
