--- a/app/src/main/res/layout/manuka_admin_fragment_past_orders.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_past_orders.xml
@@ -15,6 +15,7 @@
         android:background="@color/colorHome"
         android:orientation="horizontal"
         android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
         android:paddingTop="@dimen/_10sdp"
         android:paddingBottom="@dimen/_4sdp">
 
@@ -25,7 +26,7 @@
             android:background="@drawable/blue_btn_half_round"
             android:paddingStart="@dimen/_16sdp"
             android:paddingEnd="@dimen/_10sdp"
-            android:text="Online Payments"
+            android:text="@string/online_payments"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/_10sdp" />
 
@@ -36,7 +37,7 @@
             android:background="@drawable/red_btn_half_round"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_16sdp"
-            android:text="COD Orders"
+            android:text="@string/cod_orders"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/_10sdp" />
 
@@ -47,8 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_8sdp"
         android:paddingStart="@dimen/_12sdp"
+        android:paddingEnd="@dimen/_12sdp"
         android:paddingBottom="@dimen/_4sdp"
-        android:text="Note: These Ads are filtered considering the approval status and visibility of the advertisements are not considered."
+        android:text="@string/note_these_orders"
         android:textSize="@dimen/_10sdp"
         android:textStyle="italic" />
 
