--- a/app/src/main/res/layout/manuka_admin_order_activity_single_product_analysis.xml
+++ b/app/src/main/res/layout/manuka_admin_order_activity_single_product_analysis.xml
@@ -29,7 +29,7 @@
                 android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginEnd="@dimen/_8sdp"
-                android:text="This data will represent the product sales of the particular item that was selected also if the product price changed frequently you will be able to see the graphs and charts based on the price vs its respective sales."
+                android:text="@string/this_data_will_represent_the_product_sales_of_the_particular_item_that_was_selected_also_if_the_product_price_changed_frequently_you_will_be_able_to_see_the_graphs_and_charts_based_on_the_price_vs_its_respective_sales"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="italic" />
 
@@ -57,7 +57,7 @@
                             android:layout_height="@dimen/_54sdp"
                             android:layout_gravity="center_vertical"
                             android:contentDescription="@string/continueBtn"
-                            android:padding="@dimen/_4sdp"></ImageView>
+                            android:padding="@dimen/_4sdp" />
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -79,7 +79,7 @@
                                 android:text="@string/loading"
                                 android:textColor="@color/colorBlack"
                                 android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/orderItemCat"
@@ -87,7 +87,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="start"
                                 android:text="@string/loading"
-                                android:textSize="@dimen/_12sdp"></TextView>
+                                android:textSize="@dimen/_12sdp" />
 
                             <TextView
                                 android:id="@+id/orderItemPrice"
@@ -98,7 +98,7 @@
                                 android:text="@string/loading"
                                 android:textColor="#088F83"
                                 android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"></TextView>
+                                android:textStyle="bold" />
 
                         </LinearLayout>
 
@@ -120,13 +120,13 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="ProductID"
+                                android:text="@string/productid"
                                 android:textSize="@dimen/_10sdp" />
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="No of sales"
+                                android:text="@string/no_of_sales"
                                 android:textSize="@dimen/_10sdp" />
 
                         </LinearLayout>
@@ -176,7 +176,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="serif"
-                            android:text="Total Sales(LKR)"
+                            android:text="@string/total_sales_lkr"
                             android:textColor="@color/colorBlack"
                             android:textSize="@dimen/_10sdp"
                             android:textStyle="bold" />
@@ -205,7 +205,7 @@
                 android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_8sdp"
-                android:text="This Pie chart represent the orders that were completed based on the above product also this chart represents data based on the prices of the product and its corresponding sales."
+                android:text="@string/this_pie_chart_represent_the_orders_that_were_completed_based_on_the_above_product_also_this_chart_represents_data_based_on_the_prices_of_the_product_and_its_corresponding_sales"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="italic" />
 
@@ -234,7 +234,7 @@
                 android:layout_marginStart="@dimen/_8sdp"
                 android:layout_marginTop="@dimen/_14sdp"
                 android:layout_marginEnd="@dimen/_8sdp"
-                android:text="This Line chart represent the orders that were completed based on the above product also this chart represents data based on the prices of the product and its corresponding sales."
+                android:text="@string/this_line_chart_represent_the_orders_that_were_completed_based_on_the_above_product_also_this_chart_represents_data_based_on_the_prices_of_the_product_and_its_corresponding_sales"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="italic" />
 
