--- a/app/src/main/res/layout/manuka_activity_advertisement.xml
+++ b/app/src/main/res/layout/manuka_activity_advertisement.xml
@@ -12,7 +12,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -69,7 +69,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_8sdp"
+                        android:ellipsize="end"
                         android:fontFamily="serif"
+                        android:maxLines="2"
                         android:padding="@dimen/_2sdp"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/_18sdp"
